--- a/index.html
+++ b/index.html
@@ -8,11 +8,28 @@
 	<title>Boolando</title>
 
 	<!-- STYLE -->
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
 
+	<header>
+		<nav class="nav container">
+				<ul class="links">
+					<li><a href="#"> Donna </a></li>
+					<li><a href="#"> Uomo</a></li>
+					<li><a href="#"> Bambino </a></li>
+				</ul>
+
+			<div class="logo">
+				<img src="./img/boolean-logo.png" alt="logo">
+			</div>
+
+			<div class="social">
+				social
+			</div>
+		</nav>
+	</header>
 </body>
 
 </html>
