--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
 			</div>
 		</nav>
 	</header>
+
+	<main>
+		<div class="container">
+			<div class="row">
+				<div class="col"> <img src="./img/1.webp" alt="levis"> </div>
+				<div class="col"> <img src="./img/2.webp" alt="levis"> </div>
+				<div class="col"> <img src="./img/3.webp" alt="levis"> </div>
+				<div class="col"> <img src="./img/4.webp" alt="levis"> </div>
+				<div class="col"> <img src="./img/5.webp" alt="levis"> </div>
+				<div class="col"> <img src="./img/6.webp" alt="levis"> </div>
+			</div>
+		</div>
+	</main>
 </body>
 
 </html>
