--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
 			</div>
 		</div>
 	</main>
+
+	<footer>
+		<div class="container">
+			<div class="nav">
+				<div class="boolean">
+					<p>Boolean srl</p>
+				</div>
+
+				<div class="social">
+					social
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 
 </html>
