--- a/index.html
+++ b/index.html
@@ -34,12 +34,75 @@
 	<main>
 		<div class="container">
 			<div class="row">
-				<div class="col"> <img src="./img/1.webp" alt="levis"> </div>
-				<div class="col"> <img src="./img/2.webp" alt="levis"> </div>
-				<div class="col"> <img src="./img/3.webp" alt="levis"> </div>
-				<div class="col"> <img src="./img/4.webp" alt="levis"> </div>
-				<div class="col"> <img src="./img/5.webp" alt="levis"> </div>
-				<div class="col"> <img src="./img/6.webp" alt="levis"> </div>
+				<div class="col"> 
+					<img src="./img/1.webp" alt="levis" class="block"> 
+					<img src="./img/1b.webp" alt="levis" class="none">
+					<span class="discount">-50%</span>
+					<span class="discount green"> Sostenibilità</span>
+
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+				<div class="col"> 
+					<img src="./img/2.webp" alt="levis" class="block"> 
+					<img src="./img/2b.webp" alt="levis" class="none">
+					<span class="discount">-30%</span>
+
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+				<div class="col"> 
+					<img src="./img/3.webp" alt="levis" class="block"> 
+					<img src="./img/3b.webp" alt="levis" class="none">
+					<span class="discount">-50%</span>
+	
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+				<div class="col"> 
+					<img src="./img/4.webp" alt="levis" class="block"> 
+					<img src="./img/4b.webp" alt="levis" class="none">
+					<span class="discount">-50%</span>
+					<span class="discount green"> Sostenibilità</span>
+
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+				<div class="col"> 
+					<img src="./img/5.webp" alt="levis" class="block"> 
+					<img src="./img/5b.webp" alt="levis" class="none">
+					<span class="discount">-50%</span>
+
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+				<div class="col"> 
+					<img src="./img/6.webp" alt="levis" class="block"> 
+					<img src="./img/6b.webp" alt="levis" class="none">
+					<span class="discount">-50%</span>
+					
+					<span class="heart">&hearts;</span>
+					<p>Levis</p>
+					<h1> <b> RELAXED FIT TEE </b> </h1>
+					<p class="text-red"> <b> 14.99 </b> </p>
+				</div>
+
+
 			</div>
 		</div>
 	</main>
