--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Boolando</title>
 
+	<!-- ICONS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 	<!-- STYLE -->
 	<link rel="stylesheet" href="./style.css">
 </head>
@@ -26,7 +29,9 @@
 			</div>
 
 			<div class="social">
-				social
+				<i class="fa-regular fa-user"></i>
+				<i class="fa-regular fa-heart"></i>
+				<i class="fa-solid fa-bag-shopping"></i>
 			</div>
 		</nav>
 	</header>
@@ -111,11 +116,17 @@
 		<div class="container">
 			<div class="nav">
 				<div class="boolean">
-					<p>Boolean srl</p>
+					<h2>Boolean s.r.l.</h2>
+					<p>infomazioni legali</p>
 				</div>
 
 				<div class="social">
-					social
+					<p>Trovaci anche su</p>
+					<i class="fa-brands fa-square-twitter"></i>
+					<i class="fa-brands fa-square-facebook"></i>
+					<i class="fa-brands fa-square-instagram"></i>
+					<i class="fa-brands fa-square-pinterest"></i>
+					<i class="fa-brands fa-square-youtube"></i>
 				</div>
 			</div>
 		</div>
